--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "Rafael",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.5",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^1.19.1"
   }
 }
